fix(front): Make overflow on body hidden
Add `overflow: hidden;` to body to prevent page size from growing when image is scaled in PhotoDetailed

--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,7 @@
 
 body {
   margin: 0;
+  overflow: hidden;
   font-family: var(--font);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
